--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+<link rel="preload" as="image" href="assets/start.png">
 <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Escape de la Artesanía</title>
+    <title>Escape Artesanal</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -85,7 +86,7 @@
                 <p>Te das cuenta de que San José no está tan mal: también llueve; también, a veces, hace alguito de frío.</p> 
             </div>
 
-            <button onclick="location.reload()">Jugar de Nuevo</button>
+            <button onclick="restartToCharacterSelect()">Jugar de Nuevo</button>
             
             <h2 id="final-score" style="display:none;">Distancia Total: 0</h2>
         </div>
