Cambié el texto a "Te tropiezas con una artesanía"

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 </div>
 
 <div id="summary-screen" class="ui-screen hidden">
-    <h2>TE HAS TROPEZADO CON UNA ARTESANÍA</h2>
+    <h2>TE TROPIEZAS CON UNA ARTESANÍA</h2>
     <div id="round-score">Puntaje: 0</div>
     <h3>Artesanías esquivadas:</h3>
     <ul id="jumped-list"></ul>
