muted music and added narrative

--- a/index.html
+++ b/index.html
@@ -54,9 +54,16 @@
     <div class="tutorial-content">
         <span class="tutorial-close-x" onclick="beginGameplay()">x</span> 
         <div style="margin-bottom: 30px;">
+
+<p style="color: #f0f; font-size: 0.9rem; margin-bottom: 20px; line-height: 1.5;">
+                TIENES <strong>3 RONDAS</strong> PARA<br>
+                RECORRER <strong>250 METROS</strong><br>
+Y ESCONDERTE EN LA PANADERÍA
+            </p>
+
             <p style="color: #fff; font-size: 1rem; margin-bottom: 15px;">ESPACIO = SALTO</p> 
             <p style="color: #fff; font-size: 1rem; margin-bottom: 25px;">ESPACIO x2 = DOBLE SALTO</p> 
-            <p style="color: #f0f; font-size: 0.9rem;">OBJETIVO: RECORRE 250 METROS</p> 
+          
         </div>
     </div>
 </div>
